<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="description">Displays and can alert you to the daily Muslim prayer times.</string>
    <string name="adhan_next_time">Adhān: Next Time</string>
    <string name="adhan_timetable">Adhān: Timetable</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="help">Help</string>
    <string name="help_text"><u>Frequently Asked Questions</u>\n\nQ: Why do the times not match my local timetable?\n\nA: There are many factors that affect the schedule including the input parameters (ex. latitude, longitude, calculation method, ...), algorithmic differences and precision differences due to computations on different machines.\n\nQ: Why does the Qibla compass not point in the right direction?\n\nA: Confirm that your latitude and longitude are set correctly in your settings and your phone is away from electro-magnetic interference.\n\nQ: Why is my favorite feature not included in the application?\n\nA: Please visit the project website at adhanalarm.googlecode.com and help us improve the program.</string>
    <string name="information">Information</string>
    <string name="information_text">For more information about the program visit:\nadhanalarm.googlecode.com\n\nFor more information about Islam visit:\nwww.spiritofislam.com\n\nVersion: #</string>
    <string name="today">Today</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">`Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="ishaa">`Ishaa\'</string>
    <string name="next_fajr">Next Fajr</string>
    <string name="sdefault">Default</string>
    <string name="error_playing_alert">Error Playing Alert</string>
    <string name="error_playing_custom_file">Custom File Error</string>
    <string name="location_not_set"><u>Location Not Set</u>\n\nPlease enable the device\'s GPS or set your location manually through settings.</string>
    <string name="allahu_akbar">God is greater:\u0020</string>
    <string name="time_for">Time for <xliff:g id="time_name">%1$s</xliff:g></string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="extreme">Extreme</string>
    <string name="qibla">Qibla</string>
    <string name="compass_disclaimer">Compass works in portrait mode.</string>
    <string name="bearing_north">1) Bearing North = (1)°</string>
    <string name="bearing_qibla">2) Bearing Qibla = (1) (+/-) (2)° = (3)°</string>
    <string name="settings">Settings</string>
    <string name="bismillah_on_boot_up">Bismillah On Boot Up</string>
    <string name="notification">Notification</string>
    <string name="none">None</string>
    <string name="beep">Beep</string>
    <string name="recite">Recite</string>
    <string name="custom">Custom</string>
    <string name="file_path">File Path</string>
    <string name="file_path_example">File Path ex. /sdcard/sound.mp3</string>
    <string name="sinterface">Interface</string>
    <string name="advanced">Advanced</string>
    <string name="extra_alerts">Extra Alerts</string>
    <string name="daylight_savings">Daylight Savings</string>
    <string name="lookup_gps">Lookup\nGPS</string>
    <string name="system_time_zone">System Time Zone</string>
    <string name="gmt">GMT</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="calculation">Calculation</string>
    <string name="egypt_survey">Egyptian General Authority of Survey</string>
    <string name="karachi_shaf">Shaf`i - Karachi University of Islamic Sciences</string>
    <string name="karachi_hanaf">Hanafi - Karachi University of Islamic Sciences</string>
    <string name="north_america">Islamic Society of North America</string>
    <string name="muslim_league">Muslim World League</string>
    <string name="umm_alqurra">Umm Al-Qurra, Saudi Arabia</string>
    <string name="fixed_ishaa">Fixed Ishaa Interval (always 90)</string>
    <string name="altitude">Altitude</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="rounding">Rounding</string>
    <string name="normal">Normal</string>
    <string name="special">Special</string>
    <string name="aggressive">Aggressive</string>
    <string name="offset">Offset</string>
    <string name="minutes">minutes</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="brown">Brown</string>
    <string name="dialog">Dialog</string>
    <string name="green">Green</string>
    <string name="light">Light</string>
    <string name="month0">Muharram</string>
    <string name="month1">Safar</string>
    <string name="month2">Rabi` al-awwal</string>
    <string name="month3">Rabi` al-thani</string>
    <string name="month4">Jumada al-awwal</string>
    <string name="month5">Jumada al-thani</string>
    <string name="month6">Rajab</string>
    <string name="month7">Sha`aban</string>
    <string name="month8">Ramadan</string>
    <string name="month9">Shawwal</string>
    <string name="month10">Dhu al-Qi`dah</string>
    <string name="month11">Dhu al-Hijjah</string>
    <string name="anno_hegirae">AH</string>

    <string name="app_name" translatable="false">Muazzin</string>
    <string name="degrees_celsius" translatable="false">\u00B0C</string>
    <string name="tilde" translatable="false">~</string>
    <string name="degree_sign" translatable="false">\u00B0</string>
    <string name="right_single_quote" translatable="false">\u2019</string>
    <string name="right_double_quote" translatable="false">\u201D</string>
    <string name="next_time_marker" translatable="false">&gt;</string>
    <string name="next_time_marker_reverse" translatable="false">&lt;</string>
</resources>