<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_location_calculation"
        android:title="@string/calculation"
        android:icon="@drawable/ic_action_location_calculation"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_previous"
        android:title="@string/previous"
        android:icon="@android:drawable/ic_media_previous" />

    <item android:id="@+id/menu_next"
        android:title="@string/next"
        android:icon="@android:drawable/ic_media_next" />

    <item android:id="@+id/menu_stop"
        android:title="@string/stop"
        android:icon="@android:drawable/ic_media_pause" />

    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_action_settings"
        android:showAsAction="ifRoom" />
</menu>
