<?xml version="1.0" encoding="utf-8"?>
<themes>
    <theme  style =                     "@style/DefaultTheme"
            alternateRowColor =         "@color/semi_transparent_white"
            tabWidgetBackgroundColor =  "@android:color/black"
            compassBackground =         "@drawable/compass_background"
            compassNeedle =             "@drawable/compass_needle"
            name =                      "@string/sdefault" />

    <theme  style =                     "@style/BrownTheme"
            alternateRowColor =         "@color/semi_transparent_black"
            tabWidgetBackgroundColor =  "@color/brown_background_color"
            name =                      "@string/brown" />

    <theme  style =                     "@style/DialogTheme"
            name =                      "@string/dialog" />

    <theme  style =                     "@style/GreenTheme"
            alternateRowColor =         "@color/semi_transparent_black"
            tabWidgetBackgroundColor =  "@color/green_background_color"
            name =                      "@string/green" />

    <theme  style =                     "@style/LightTheme"
            alternateRowColor =         "@color/semi_transparent_black"
            tabWidgetBackgroundColor =  "@color/semi_transparent_black"
            name =                      "@string/light" />
</themes>