<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <LinearLayout android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
            <LinearLayout android:orientation="vertical"
                android:layout_height="fill_parent"
                android:layout_width="wrap_content" style="@style/labelColumn">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/fajr"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/sunrise"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/dhuhr"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/asr"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/maghrib"
                    android:layout_weight="1" android:gravity="fill_vertical" />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/ishaa"
                    android:layout_weight="1" android:gravity="fill_vertical" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Spinner android:id="@+id/notification_fajr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
                <Spinner android:id="@+id/notification_sunrise"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
                <Spinner android:id="@+id/notification_dhuhr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
                <Spinner android:id="@+id/notification_asr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
                <Spinner android:id="@+id/notification_maghrib"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
                <Spinner android:id="@+id/notification_ishaa"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/buttons_save_reset" />
    </LinearLayout>
</ScrollView>