<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingLeft="2px">
        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:paddingRight="5px">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/latitude" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/longitude" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/qibla" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/current_latitude_deg"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
            <TextView android:id="@+id/current_longitude_deg"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
            <TextView android:id="@+id/current_qibla_deg"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:paddingLeft="5px" android:paddingRight="5px">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="°" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="°" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="°" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:id="@+id/current_latitude_min"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
            <TextView android:id="@+id/current_longitude_min"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
            <TextView android:id="@+id/current_qibla_min"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:paddingLeft="5px" android:paddingRight="5px">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="'" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="'" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="'" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:id="@+id/current_latitude_sec"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
            <TextView android:id="@+id/current_longitude_sec"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
            <TextView android:id="@+id/current_qibla_sec"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="~" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:paddingLeft="5px" android:paddingRight="5px">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="''" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="''" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="''" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:paddingTop="5px" android:paddingBottom="5px">
        <uz.efir.azon.view.QiblaCompassView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="fill|center" android:id="@+id/qibla_compass" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content" android:layout_height="fill_parent">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bearing_north"
            android:paddingLeft="2px" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bearing_qibla"
            android:paddingLeft="2px" />
        <TextView style="@style/finePrint" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:paddingTop="3px"
            android:text="@string/compass_disclaimer" />
    </LinearLayout>
</LinearLayout>